--- a/source/Habanero.Util/Habanero.Util.csproj
+++ b/source/Habanero.Util/Habanero.Util.csproj
@@ -146,6 +146,7 @@
     <Compile Include="File\TypeLoader.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TypeUtilities.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="XmlDocumentValidator.cs">
       <SubType>Code</SubType>
