Modified DataSetProvider so that each column in the dataset is strongly typed to the data type e.g. DateTime. This allows you to provide natural sorting to the column i.e. dates sort as dates and it provides the capability to use Custom formats directly on the grid e.g. dd MMM yyyy format for date.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -71,6 +71,7 @@
     <Compile Include="FilterController\TestDataViewNullFilterClause.cs" />
     <Compile Include="FilterController\TestFilterControlDate.cs" />
     <Compile Include="FilterController\TestFilterInputBoxCollection.cs" />
+    <Compile Include="Grid\TestDataGridViewColumn.cs" />
     <Compile Include="Grid\TestEditableGridControl.cs" />
     <Compile Include="Grid\TestGridInitialiser.cs" />
     <Compile Include="Grid\TestReadOnlyGrid.cs" />
