Moved ControlMapperStrategyWin to a seperate class and implemented to keypress overriding stuff in windows to override the enter key behaviour for windows.

--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -54,6 +54,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ControlCollectionWin.cs" />
+    <Compile Include="ControlMapperStrategyWin.cs" />
     <Compile Include="ControlWin.cs">
       <SubType>Component</SubType>
     </Compile>
