Added IsValid(string message) to BusinessObject.State as an overload alternative to IsValid() and IsValidMessage Added _minValueExpression and _maxValueExpression to PropRuleDate so that we can use Valid Expressions for evaluating valid dates e.g. Max = 'Today' TestXmlPropertyRuleLoader: Modified s.t. load string expressions for dates e.g. 'Today' Added a CancelButton to IWizardControl, Added CancelWizard to IWizardController, Implemented CancelWizard in Wizard/IWizardControl.cs Started work with ControlMapperers to implement windows functionality as strategies.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -50,9 +50,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nmock.dll</HintPath>
     </Reference>
+    <Reference Include="NMock2, Version=2.0.0.44, Culture=neutral, PublicKeyToken=37d3be0adc87c2b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\NMock2.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.4.6.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="NUnitForms, Version=2.0.3079.32234, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\NUnitForms.dll</HintPath>
     </Reference>
     <Reference Include="Rhino.Mocks, Version=3.2.0.781, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -84,6 +92,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Mappers\TestComboBoxCollectionController.cs" />
+    <Compile Include="Mappers\TestControlMapperStrategyWin.cs" />
     <Compile Include="Mappers\TestDateTimePickerMapper.cs" />
     <Compile Include="Mappers\TestCheckBoxMapper.cs" />
     <Compile Include="Mappers\TestControlMapper.cs">
