Created a BORegistry as a place to put your in use BusinessObjectLoader.  This can be swapped out so that loading happens from memory or the database (with current implementations). These are incomplete loaders at the moment - all actual loading is still using the BOLoader. Implemented the first actual functionality of the db loader - up to now it was in turn using the BOLoader. Further work on the Criteria class including the ability to create a Criteria from a PrimaryKey or from a Relationship. Created a SelectQuery class to model a select query independant of data source. Created a SelectQueryDB class that has the ability to generate a SQL statement from a SelectQuery. This is very rudimentary at the moment. More extractions of interfaces when required.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -115,6 +115,8 @@
     <Compile Include="IPropRule.cs" />
     <Compile Include="IRelationship.cs" />
     <Compile Include="IRelationshipCol.cs" />
+    <Compile Include="IRelKey.cs" />
+    <Compile Include="IRelProp.cs" />
     <Compile Include="ISupportsAutoIncrementingField.cs" />
     <Compile Include="ITransactional.cs" />
     <Compile Include="ITransactionalDB.cs" />
