Took the first steps towards getting the businessobjectcollection to load from the new BusinessObjectLoader by creating LoadAll_Loader method that will one day replace LoadAll Created an OrderCriteria class that models the "Order By" portion of a select query. Added an overload to IBusinessObjectLoader.GetBusinessObjectCollection to take an OrderCriteria and use it to sort the loaded collection on (either by using an Order by on the sql statement or sorting in memory).

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -165,6 +165,7 @@
     <Compile Include="TestDataStoreInMemory.cs" />
     <Compile Include="TestNumberGenerator.cs" />
     <Compile Include="TestSelectQuery.cs" />
+    <Compile Include="TestSelectQueryDB.cs" />
     <Compile Include="TestTransactionCommitter.cs" />
     <Compile Include="TestMultipleRelationship.cs" />
     <Compile Include="TestRelatedBusinessObjectCollection.cs" />
