Restructured the Assembly info classes so that there is one shared class that contains the version information. Changed Habanero versioning strategy to a manual process (no auto generated revision numbers). Fixed issue with Auto Increment in SQLite. Added a DatabaseConnection.LoadDataReader overload where the transaction can be specified as a parameter.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -98,6 +98,9 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="..\Common\AssemblyInfoShared.cs">
+      <Link>Properties\AssemblyInfoShared.cs</Link>
+    </Compile>
     <Compile Include="Exceptions\ArgumentValidationHelper.cs" />
     <Compile Include="Exceptions\CannotSaveException.cs">
       <SubType>Code</SubType>
