--- a/source/Habanero.WebGUI/Habanero.WebGUI.csproj
+++ b/source/Habanero.WebGUI/Habanero.WebGUI.csproj
@@ -83,6 +83,9 @@
     <Compile Include="PanelFactory.cs" />
     <Compile Include="PanelFactoryInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\Common\AssemblyInfoShared.cs">
+      <Link>Properties\AssemblyInfoShared.cs</Link>
+    </Compile>
     <Compile Include="ReadOnlyGrid.cs">
       <SubType>Component</SubType>
     </Compile>
