(Merged from branch v1.4) Fixed issues with SQL server where the orderby parameters are required to be part of the distinct select statement. Improved formatting of order by parameters for BusinessObjectCollection. Added method to ClassDef for retrieving the table name given a prop def. Improved field formatting in SqlFormattingHelper. Added method to SqlStatement for adding extra select fields to the statement. Restructured the Assembly info classes so that there is one shared class that contains the version information. Changed Habanero versioning strategy to a manual process (no auto generated revision numbers). Fixed issue with Auto Increment in SQLite. Added a DatabaseConnection.LoadDataReader overload where the transaction can be specified as a parameter. Updated documentation (doesn't show Habanero.UI.Base/WebGUI/Win)

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -136,6 +136,9 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="..\Common\AssemblyInfoShared.cs">
+      <Link>Properties\AssemblyInfoShared.cs</Link>
+    </Compile>
     <Compile Include="BOKey.cs">
       <SubType>Code</SubType>
     </Compile>
