--- a/source/Habanero.UI/Habanero.UI.csproj
+++ b/source/Habanero.UI/Habanero.UI.csproj
@@ -189,6 +189,9 @@
     </Compile>
     <Compile Include="LayoutManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\Common\AssemblyInfoShared.cs">
+      <Link>Properties\AssemblyInfoShared.cs</Link>
+    </Compile>
     <Compile Include="Util\ControlsHelper.cs" />
     <Compile Include="Util\DateTimePickerUtil.cs" />
     <Compile Include="Util\DialogUtilities.cs" />
