--- a/source/Habanero/Habanero.csproj
+++ b/source/Habanero/Habanero.csproj
@@ -47,6 +47,9 @@
   <ItemGroup>
     <Compile Include="HabaneroAppConsole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\Common\AssemblyInfoShared.cs">
+      <Link>Properties\AssemblyInfoShared.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
