Moved ITransactionCommitterFactory into BORegistry from GlobalRegistry. Moved it then into IDataAccessor. Created a DataAccessorDB and DataAccessorInMemory that implement IDataAccessor - these are used for persisting and loading BusinessObjects

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -125,9 +125,12 @@
     <Compile Include="CriteriaManager\IExpression.cs" />
     <Compile Include="CriteriaManager\PropDefParameterSQLInfo.cs" />
     <Compile Include="CriteriaManager\SQLCriteriaCreator.cs" />
+    <Compile Include="DataAccessorDB.cs" />
+    <Compile Include="DataAccessorInMemory.cs" />
     <Compile Include="DataStoreInMemory.cs" />
     <Compile Include="DeleteHelper.cs" />
     <Compile Include="IBusinessObjectLoader.cs" />
+    <Compile Include="IDataAccessor.cs" />
     <Compile Include="IDataSetProvider.cs" />
     <Compile Include="Loaders\XmlTriggerLoader.cs" />
     <Compile Include="Loaders\XmlUIFormGridLoader.cs" />
