Refactored SelectQuery and SelectQueryDB to a decorator pattern instead of inheritance since it wasn't right. Created a QueryBuilder so that SelectQuery does not have a dependency on ClassDef since it is supposed to model a generic select query, not specifically a BusinessObject one.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -132,6 +132,7 @@
     <Compile Include="IBusinessObjectLoader.cs" />
     <Compile Include="IDataAccessor.cs" />
     <Compile Include="IDataSetProvider.cs" />
+    <Compile Include="ISelectQuery.cs" />
     <Compile Include="Loaders\XmlTriggerLoader.cs" />
     <Compile Include="Loaders\XmlUIFormGridLoader.cs" />
     <Compile Include="ConcurrencyControl\PessimisticLockingDB.cs" />
@@ -179,6 +180,7 @@
     <Compile Include="IBusinessObjectCollectionLoader.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="QueryBuilder.cs" />
     <Compile Include="QueryField.cs" />
     <Compile Include="ReadOnlyDataSetProvider.cs">
       <SubType>Code</SubType>
