Added IDataGridViewComboBoxColumn.cs and tests for editable grid column types

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -77,6 +77,7 @@
     <Compile Include="DateTimePicker\DateTimePickerUtil.cs" />
     <Compile Include="DefaultBODeletor.cs" />
     <Compile Include="Grid\IDataGridViewColumn.cs" />
+    <Compile Include="Grid\IDataGridViewComboBoxColumn.cs" />
     <Compile Include="IListView.cs" />
     <Compile Include="LayoutManagers\ColumnLayoutManager.cs" />
     <Compile Include="IListViewItem.cs" />
