Started merging nullable date time picker abilities into DateTimePickerManager from DateTimePickerController.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -121,6 +121,7 @@
     <Compile Include="TestControlFactory.cs" />
     <Compile Include="Mappers\TestControlMapperCollection.cs" />
     <Compile Include="TestDateRangeComboBox.cs" />
+    <Compile Include="TestDateTimePicker.cs" />
     <Compile Include="TestDateTimePickerController.cs" />
     <Compile Include="TestDefaultBOCreator.cs" />
     <Compile Include="TestDefaultBOEditorForm.cs" />
