More work on loading. Replaced most uses of a string for an OrderBy parameter with the new OrderCriteria, converting ToString when necessary for old code to work. Added tests for loading with sorting - this works, but not sorting through related properties. (This actually works in the memory one though) Still no permanent changes to loading using the DataAccessor made because of the sorting through related properties not working. Tests are ignored temporarily as it is more important that projects such as Asset Mgmt work.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -112,6 +112,7 @@
     <Compile Include="InvalidRelationshipAccessException.cs" />
     <Compile Include="IPrimaryKey.cs" />
     <Compile Include="IPropDef.cs" />
+    <Compile Include="IPropertyComparer.cs" />
     <Compile Include="IPropRule.cs" />
     <Compile Include="IRelationship.cs" />
     <Compile Include="IRelationshipCol.cs" />
@@ -122,6 +123,7 @@
     <Compile Include="ITransactionalDB.cs" />
     <Compile Include="ITransactionCommitter.cs" />
     <Compile Include="ITransactionLog.cs" />
+    <Compile Include="OrderCriteria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
