More work on loading. It became necessary to create non-typed versions of all the loading methods as when you're in things like SingleRelationship you don't have a Type parameter that you can pass through and you have to instead pass in the ClassDef.  Wrote tests for all these non-typed loading methods.  Need to at this point refactor the BusinessObjectLoader classes substantially as there is some duplicate code.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -94,6 +94,7 @@
     <Compile Include="BOKeyEventArgs.cs" />
     <Compile Include="BOPropCol.cs" />
     <Compile Include="BOPropEventArgs.cs" />
+    <Compile Include="Criteria.cs" />
     <Compile Include="Exceptions\InvalidObjectIdException.cs" />
     <Compile Include="Exceptions\InvalidXmlDefinitionException.cs" />
     <Compile Include="HabaneroApp.cs" />
@@ -112,12 +113,14 @@
     <Compile Include="InvalidRelationshipAccessException.cs" />
     <Compile Include="IPrimaryKey.cs" />
     <Compile Include="IPropDef.cs" />
+    <Compile Include="IPropDefCol.cs" />
     <Compile Include="IPropertyComparer.cs" />
     <Compile Include="IPropRule.cs" />
     <Compile Include="IRelationship.cs" />
     <Compile Include="IRelationshipCol.cs" />
     <Compile Include="IRelKey.cs" />
     <Compile Include="IRelProp.cs" />
+    <Compile Include="ISelectQuery.cs" />
     <Compile Include="ISupportsAutoIncrementingField.cs" />
     <Compile Include="ITransactional.cs" />
     <Compile Include="ITransactionalDB.cs" />
@@ -218,6 +221,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="PropReadWriteRule.cs" />
+    <Compile Include="QueryField.cs" />
     <Compile Include="RSAPasswordCrypter.cs" />
     <Compile Include="XMLWrapper.cs" />
   </ItemGroup>
