Added an IErrorProvider. This is to support both the Gizmox and Windows ErrorProvider which allows us to then use the ValidationProvider. Added classes required to support the ValidationProvider. The ValidationProvider allows us to add validatiion rules to a control which can then be checked and the user notified via an icon next to the control. Added tests for ValidationUtil and began adding test for the ValidationProvider. The validation provider still needs to be added to the PanelFactory where the rules will be set based on the ClassDefs.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -136,6 +137,8 @@
     <Compile Include="TestListView.cs" />
     <Compile Include="Mappers\TestListComboBoxMapper.cs" />
     <Compile Include="PanelFactory\TestPanelFactory.cs" />
+    <Compile Include="TestValidationProvider.cs" />
+    <Compile Include="TestValidationRule.cs" />
     <Compile Include="Wizard\TestWizardControl.cs" />
     <Compile Include="Wizard\TestWizardController.cs" />
   </ItemGroup>
