--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EPFramework.Validation, Version=1.0.3096.30859, Culture=neutral, PublicKeyToken=dd1b4bbee7965b30, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\EPFramework.Validation.dll</HintPath>
-    </Reference>
     <Reference Include="log4net, Version=1.2.0.30714, Culture=neutral, PublicKeyToken=b32731d11ce58905">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\log4net.dll</HintPath>
@@ -45,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -83,11 +80,13 @@
     <Compile Include="DefaultBODeletor.cs" />
     <Compile Include="Grid\IDataGridViewColumn.cs" />
     <Compile Include="Grid\IDataGridViewComboBoxColumn.cs" />
+    <Compile Include="IErrorProvider.cs" />
     <Compile Include="IListView.cs" />
     <Compile Include="LayoutManagers\ColumnLayoutManager.cs" />
     <Compile Include="IListViewItem.cs" />
     <Compile Include="IListViewItemCollection.cs" />
     <Compile Include="ISelectedListViewItemCollection.cs" />
+    <Compile Include="Util\CustomValidationEventArgs.cs" />
     <Compile Include="Util\GlobalUIRegistry.cs" />
     <Compile Include="Grid\IDataGridView.cs" />
     <Compile Include="Grid\IDataGridViewCell.cs" />
@@ -165,6 +164,11 @@
     <Compile Include="PanelFactory\PanelFactoryInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\UISettings.cs" />
+    <Compile Include="Util\ValidationCompareOperator.cs" />
+    <Compile Include="Util\ValidationDataType.cs" />
+    <Compile Include="Util\ValidationProvider.cs" />
+    <Compile Include="Util\ValidationRule.cs" />
+    <Compile Include="Util\ValidationUtil.cs" />
     <Compile Include="Wizard\IWizardControl.cs" />
     <Compile Include="Wizard\IWizardController.cs" />
     <Compile Include="Wizard\IWizardStep.cs" />
@@ -190,6 +194,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Util\ValidationProvider.resx">
+      <DependentUpon>ValidationProvider.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
