--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -81,6 +81,9 @@
     <Compile Include="FilterControlWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="FormWin.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GridBaseWin.cs">
       <SubType>Component</SubType>
     </Compile>
