Added a FormGiz which implements IFormChilli and inheritz from the VWG Form

--- a/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
+++ b/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
@@ -89,6 +89,9 @@
     </Compile>
     <Compile Include="FormExceptionNotifier.cs">
     </Compile>
+    <Compile Include="FormGiz.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Grid\DataGridViewCellStyleGiz.cs" />
     <Compile Include="Grid\DataGridViewColumnGiz.cs" />
     <Compile Include="GroupBoxGiz.cs">
