--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Habanero.DB, Version=1.5.0.0, Culture=neutral, PublicKeyToken=13cd8e0ef3c14147, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\bin\Habanero.DB.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -81,12 +85,14 @@
     <Compile Include="FilterControlWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="FormExceptionNotifier.cs" />
     <Compile Include="FormWin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GridBaseWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="HabaneroAppWin.cs" />
     <Compile Include="LabelWin.cs">
       <SubType>Component</SubType>
     </Compile>
