Renamed to BOColTabControl, since it is a tab control that represents a BO Col. (a tab control is already a collection).

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -108,7 +108,7 @@
     <Compile Include="Mappers\TestNumericUpDownIntegerMapper.cs" />
     <Compile Include="Mappers\TestTextBoxMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestBOTabControl.cs">
+    <Compile Include="TestBOColTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="TestControlCollection.cs" />
