--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -83,7 +83,10 @@
     <Compile Include="FilterController\TestDataViewNullFilterClause.cs" />
     <Compile Include="FilterController\TestFilterControlDate.cs" />
     <Compile Include="FilterController\TestFilterInputBoxCollection.cs" />
+    <Compile Include="Grid\TestCalendarCell.cs">
+    </Compile>
     <Compile Include="Grid\TestDataGridViewColumn.cs" />
+    <Compile Include="Grid\TestDataGridViewDateTimePickerColumn.cs" />
     <Compile Include="Grid\TestEditableGridControl.cs" />
     <Compile Include="Grid\TestGridInitialiser.cs" />
     <Compile Include="Grid\TestReadOnlyGrid.cs" />
