Further testing and fixes on BOColTabControl and IBusinessObjectControl. Implemented DockStyle mask, which affects most controls.

--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -129,6 +129,9 @@
     <Compile Include="TabControlWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="TabPageWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TextBoxWin.cs">
       <SubType>Component</SubType>
     </Compile>
