Finished off mappers. Made a start for DefaultBOEditorFormWin.

--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.0.30714, Culture=neutral, PublicKeyToken=b32731d11ce58905">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -69,6 +73,9 @@
     </Compile>
     <Compile Include="DateTimePicker\DateTimePickerControllerWin.cs" />
     <Compile Include="DateTimePicker\DateTimePickerUtilWinTemp.cs" />
+    <Compile Include="DefaultBOEditorFormWin.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="EditableGridControlWin.cs">
       <SubType>UserControl</SubType>
     </Compile>
